# REX

./: .gitignore  package.xml  setup.cfg  setup.py
REX/REX/: camera.py  leds_serial.py  lidar_filtration.py  main.py  puces_sensors.py
REX/REX/serialusm2m/: #serialusM2M.py#  AX GET pos.py  Fonction_AX.py  GPIOREADALL.py  __init__.py  calage start.py  fonction_PID.py  fonction_Pos_Calage.py  fonction_deplacement.py  fonction_deplacement2.py  fonction_deplacement_ros.py  serialusM2M.py
REX/launch/: rex_launch.py
