<?xml version="1.0"?>
<package format="3">
  <name>REX</name>
  <version>0.0.1</version>
  <description>REX ROS 2 package for robot control</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>License Declaration</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>pyserial</depend>
  <depend>matplotlib</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
